# phosphor-time-manager

./: .clang-tidy  .gitignore  LoadVariant.hpp  MAINTAINERS  Makefile  Makefile.am  OWNERS  README.md  VariantVisitors.hpp  bmc_epoch.cpp  bmc_epoch.hpp  bmc_time_change_listener.hpp  bootstrap.sh  configure.ac  elog-errors.hpp  epoch_base.cpp  epoch_base.hpp  groups  host_epoch.cpp  host_epoch.hpp  main.cpp  manager.cpp  manager.hpp  meson.build  meson.options  meson_options.txt  project.config  property_change_listener.hpp  settings.cpp  settings.hpp  time-config.cpp  time-config.hpp  time-manager.c  time-manager.cpp  time-manager.hpp  time-manager_main.cpp  time-register.c  time-register.hpp  time-utils.c  time-utils.cpp  (+10 more)
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt
subprojects/: phosphor-logging.wrap
test/: Makefile.am  TestBmcEpoch.cpp  TestEpochBase.cpp  TestHostEpoch.cpp  TestManager.cpp  TestTimeManager.cpp  TestUtils.cpp  meson.build  mocked_bmc_time_change_listener.hpp  mocked_property_change_listener.hpp
xyz/openbmc_project/Time/: Internal.errors.yaml  Internal.metadata.yaml
xyz/openbmc_project/Time/EpochTime/: server.hpp
