# Features List

# command : meson configure -Dfeature_name=enabled

option( 'tests', type : 'feature',
        description: 'Build unit tests'
      )

# Commandline variables list
# Value can be assigned from commandline to below variables
# otherwise default value will be considered
# Command: meson configure -Doption=value

# Ex: meson configure -DOECORE_TARGET_SYSROOT=path

option ( 'busname', type : 'string',
          value : 'xyz.openbmc_project.Time.Manager',
          description : 'The Time Manager DBus busname to own')

option ( 'obj_path_bmc', type : 'string',
          value : '/xyz/openbmc_project/time/bmc',
          description : 'The bmc epoch Dbus root')

option ( 'default_time_mode', type : 'combo',
          choices: ['Mode::Manual', 'Mode::NTP'],
          value : 'Mode::Manual',
          description : 'The default time mode')
